styles/styles.css
html, body {
  font-family: 'Roboto', Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-style: normal;
  min-height: 100%;
  height: 100%;
  max-width: 100vw;
  padding: 0;
  margin: 0;
}

body div main {
  min-height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

main h1 {
  text-align: center;
  margin: 0;
  padding: 1em;
}

main > search {
  text-align: center;
  height: 2em;
  width: 100%;
  padding: 1em;
}

main > search input {
  max-width: 80%;
}

main > article {
  position: relative;
  padding: 1em;
  border: 1px solid #000;
  margin: 1em;
  z-index: 10;
  background: #fff;
}

article > section > ul {
  padding: 0 1em;
}

article > section > ul > li {
  justify-content: space-between;
  display: flex;
  flex-flow: nowrap;
  line-height: 2em;
  border-bottom: 1px dotted #000;
}

article > section > ul > li > span:nth-child(2) {
  text-align: end;
}

footer {
  position: absolute;
  left: 0;
  bottom: 0;
  right: 0;
  height: 2em;
  width: 100%;
  text-align: center;
  top: calc(100% - 5em);
  z-index: 0;
}

